--- a/src/app/pages/hud-template/hud-template.page.scss
+++ b/src/app/pages/hud-template/hud-template.page.scss
@@ -700,7 +700,7 @@ ion-content {
 
 // Categories
 .categories-container {
-  margin-top: 32px;
+  margin-top: 10px;
   
   .categories-title {
     font-size: 20px;
